// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormViewToggler component should render default view 1`] = `
<ForwardRef(Grid)
  alignItems="center"
  container={true}
  direction="row"
  spacing={0}
>
  <ForwardRef(Grid)
    item={true}
  >
    <ForwardRef(Tooltip)
      title="Switch to tabbed mode"
    >
      <ForwardRef(Switch)
        checked={false}
        value="tabbed"
      />
    </ForwardRef(Tooltip)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
  >
    <Connect(HelpIcon)
      IconComponent={
        Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        }
      }
      buttonLabel="Got it"
      text={
        <div>
          <ForwardRef(Typography)
            component="h4"
            variant="h6"
          >
            Tab navigation
          </ForwardRef(Typography)>
          <p>
            To navigate tabs while in tabbed mode, hold CTRL and SHIFT and use the LEFT and RIGHT arrow keys.
          </p>
          <ForwardRef(Typography)
            component="h4"
            variant="h6"
          >
            Form style
          </ForwardRef(Typography)>
          <p>
            To switch between tabbed or full form mode, hold CTRL and SHIFT and use the UP and DOWN arrow keys.
          </p>
          <p>
            Your preference is saved as a cookie on this browser and it will remember your preference.
          </p>
          <ForwardRef(Typography)
            component="h4"
            variant="h6"
          >
            Page zoom
          </ForwardRef(Typography)>
          <p>
            Using 
            <b>
              CTRL
            </b>
             & 
            <b>
              +/-
            </b>
             will zoom the page in/out further for more screen real estate.
          </p>
        </div>
      }
      title="Keyboard shortcuts"
      tooltip="Learn about keyboard shortcuts"
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`FormViewToggler component should render tooltip for full form 1`] = `
<ForwardRef(Grid)
  alignItems="center"
  container={true}
  direction="row"
  spacing={0}
>
  <ForwardRef(Grid)
    item={true}
  >
    <ForwardRef(Tooltip)
      title="Switch to full form mode"
    >
      <ForwardRef(Switch)
        checked={true}
        value="tabbed"
      />
    </ForwardRef(Tooltip)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
  >
    <Connect(HelpIcon)
      IconComponent={
        Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        }
      }
      buttonLabel="Got it"
      text={
        <div>
          <ForwardRef(Typography)
            component="h4"
            variant="h6"
          >
            Tab navigation
          </ForwardRef(Typography)>
          <p>
            To navigate tabs while in tabbed mode, hold CTRL and SHIFT and use the LEFT and RIGHT arrow keys.
          </p>
          <ForwardRef(Typography)
            component="h4"
            variant="h6"
          >
            Form style
          </ForwardRef(Typography)>
          <p>
            To switch between tabbed or full form mode, hold CTRL and SHIFT and use the UP and DOWN arrow keys.
          </p>
          <p>
            Your preference is saved as a cookie on this browser and it will remember your preference.
          </p>
          <ForwardRef(Typography)
            component="h4"
            variant="h6"
          >
            Page zoom
          </ForwardRef(Typography)>
          <p>
            Using 
            <b>
              CTRL
            </b>
             & 
            <b>
              +/-
            </b>
             will zoom the page in/out further for more screen real estate.
          </p>
        </div>
      }
      title="Keyboard shortcuts"
      tooltip="Learn about keyboard shortcuts"
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
